--- a/nahbah-frontend/package.json
+++ b/nahbah-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/fjalla-one": "^5.2.5",
     "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
@@ -18,8 +19,8 @@
     "lucide-react": "^0.508.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.3",
-    "tailwind-merge": "^3.2.0",
+    "react-router-dom": "^7.6.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
