--- a/nahbah-frontend/package.json
+++ b/nahbah-frontend/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@fontsource/fjalla-one": "^5.2.5",
+    "@headlessui/react": "^2.2.3",
     "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.11.0",
+    "headlessui": "^0.0.0",
     "lucide-react": "^0.508.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.5"
