--- a/nahbah-frontend/package.json
+++ b/nahbah-frontend/package.json
@@ -19,9 +19,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.11.0",
     "headlessui": "^0.0.0",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.508.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^16.0.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.0",
