--- a/nahbah-frontend/.env.production
+++ b/nahbah-frontend/.env.production
@@ -1,2 +1,1 @@
-# Production API URL - Update this with your deployed backend URL
-VITE_API_BASE_URL=https://your-backend-domain.com/api
+VITE_API_URL=https://nahbah-backend-475da75619fb.herokuapp.com/api
