--- a/nahbah-frontend/package.json
+++ b/nahbah-frontend/package.json
@@ -29,7 +29,8 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "terser": "^5.44.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -50,6 +51,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
+    "vite-bundle-visualizer": "^1.2.1",
     "vitest": "^3.2.4"
   }
 }
